syntax = "proto3";

package types;

message Node {
    int32 Ty = 1;
    oneof value {
        FullNode  full = 2;
        ShortNode short = 3;
        HashNode  hash = 4;
        ValueNode val  = 5;
    }
}

message HaveChild {
    bool have = 1;
    Node childNode = 2;
}

message FullNode {
    repeated HaveChild hasChild = 1;
}

message ShortNode {
    bytes key = 1;
    Node val = 2;
}

message HashNode {
    bytes hash = 1;
}

message ValueNode {
    bytes value = 1;
}
